--- a/styleDark.css
+++ b/styleDark.css
@@ -3,17 +3,21 @@
     margin: 0;
 }
 
+body{
+    background: #16161E;
+}
+
 .card{
-    background: #ffffff;
+    background: #1E202E;
     width: 302px;
     height: 407px;
     border-radius: 20px;
-    border: 1px solid #EEEEEE;
+    
     font-family: 'Nunito Sans', sans-serif;
     margin: 100px;
-    -webkit-box-shadow: 0px 7px 37px 9px rgba(245,245,245,1);
+    /* -webkit-box-shadow: 0px 7px 37px 9px rgba(245,245,245,1);
     -moz-box-shadow: 0px 7px 37px 9px rgba(245,245,245,1);
-    box-shadow: 0px 7px 37px 9px rgba(245,245,245,1);
+    box-shadow: 0px 7px 37px 9px rgba(245,245,245,1); */
 }
 
 
@@ -53,6 +57,7 @@
 .text__tittle{
     font-size: 16px;
     font-weight: 600;
+    color: white;
     
 }
 
@@ -63,28 +68,32 @@
 .price{
     
     font-weight: 200;
+    color: white;
+    font-size: 15px;
 
 }
 
 .prices__count{
     font-size: 20px;
     font-weight: 700;
+    color: white;
 }
 
 .button__cart{
     text-decoration: none;
     padding: 12px;
     padding-top: 15px;
-    padding-bottom: 15px;
+    
     font-size: 15px;
-    color: #000000;
-    background-color: #ffffff;
+    color: #ffffff;
+    background-color: #333546;
     border-radius: 20px;
-    border: 1px solid #EEEEEE;
+    border: 1px solid #333546;
     
 }
 
 .button__cart:hover{
     color: #fff;
     background-color: #ff1b54;
+    border: 1px solid #ff1b54;
   }
