--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@
     padding-bottom: 15px;
     font-size: 15px;
     color: #000000;
-    background-color: #ffffff;
+    background-color: #f1f1f1;
     border-radius: 20px;
     border: 1px solid #EEEEEE;
     
